edit page updated with alignment issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -302,3 +302,15 @@ body{
 }
 
 /* Edit and Create Button Styling END */
+
+#updateAndEditLabels{
+  color: white;
+}
+
+#editAndDeleteLabelSpacing{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
